test/sema/positive/simd.impala
fn simd_type(id: int) -> float {
    let i = simd[1.0f, 2.0f, 3.0f, 4.0f];
    let j = simd[2.0f, 4.0f, 5.0f, 1.0f];
    let k = i + j * simd[2.0f, 2.0f, 2.0f, 2.0f];
    let l = simd[1, 2, 3, 4];

    let m = !(j < k);

    if m(id) {
        k(id) + i(l(id))
    } else {
        i(id) * k(2)
    }
}
